updated login, ui design and system flow